crates/schema/tests/compile_fail/derive_range_min_gt_max.rs
use nebula_schema::Schema;

#[derive(Schema)]
#[allow(dead_code)]
struct Bad {
    #[validate(range(100..=50))]
    count: u32,
}

fn main() {
    let _ = Bad::schema();
}
