crates/schema/tests/compile_fail/derive_range_min_gt_max.stderr
error: #[validate(range(..))]: min (100) cannot exceed max (50)
 --> tests/compile_fail/derive_range_min_gt_max.rs:6:22
  |
6 |     #[validate(range(100..=50))]
  |                      ^^^

error[E0599]: no function or associated item named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_range_min_gt_max.rs:11:18
   |
 5 | struct Bad {
   | ---------- function or associated item `schema` not found for this struct
...
11 |     let _ = Bad::schema();
   |                  ^^^^^^ function or associated item not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
